# D_2104

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  technology.tex  webpack.config.js
src/: App.js  Visualize_Sounds_Core_addon.node  electron-starter.js  index.html  main.js  result.js
src/addon/: audio_player.cpp  audio_player.h  entrypoint.cpp  extract_feature.cpp  extract_feature.h  find_similar_audio.cpp  find_similar_audio.h  find_similar_audio_mock.h  register.cpp  register.h  register_mock.h  window_function_constant.h
src/components/: SuccessAlert.jsx  tab.jsx
src/lib/: nodesParser.js
src/pages/: ResultPageStyle.css  result.jsx  serch.jsx  setting.jsx  stylesheet.css  tab.jsx
tests/: addonTests.js
vscore/: package.json
